.antlr/MontyPythonParser.java
// Generated from d:/Downloads/Compilador(2)-novo/Compilador-novo/MontyPythonParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MontyPythonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LSQB=1, RSQB=2, LBRACE=3, RBRACE=4, TYPE_COMMENT=5, FSTRING_START=6, FSTRING_MIDDLE=7, 
		FSTRING_END=8, INDENT=9, DEDENT=10, ELSE=11, BREAK=12, CONTINUE=13, WHILE=14, 
		ELIF=15, IF=16, FOR=17, IN=18, RANGE=19, PRINT=20, INPUT=21, LPAR=22, 
		RPAR=23, COLON=24, PLUS=25, MINUS=26, TIMES=27, DIVIDE=28, FLOOR_DIVIDE=29, 
		MODULO=30, EXPONENT=31, LESS=32, GREATER=33, EQUAL=34, COMMA=35, EQEQUAL=36, 
		NOTEQUAL=37, LESSEQUAL=38, GREATEREQUAL=39, LEFT_BRACKET=40, RIGHT_BRACKET=41, 
		AND=42, OR=43, NOT=44, L_ADD=45, L_SIZE=46, L_REMOVE=47, RETURN=48, DEF=49, 
		FUNCTION_DEF=50, TYPE_INT=51, TYPE_FLOAT=52, TYPE_NUMBER=53, NAME=54, 
		NEWLINE=55, COMMENT=56, WS=57, EXPLICIT_LINE_JOINING=58, INT=59, FLOAT=60, 
		LIST_VALUE=61, NUMBER=62, ERRORTOKEN=63, STRING=64, A=65, B=66, C=67, 
		D=68, E=69, F=70;
	public static final int
		RULE_file_input = 0, RULE_stmt = 1, RULE_simple_stmt = 2, RULE_small_stmt = 3, 
		RULE_expr_stmt = 4, RULE_list_stmt = 5, RULE_list_op = 6, RULE_functions_stmt = 7, 
		RULE_function_def = 8, RULE_flow_stmt = 9, RULE_break_stmt = 10, RULE_continue_stmt = 11, 
		RULE_compound_stmt = 12, RULE_if_stmt = 13, RULE_while_stmt = 14, RULE_for_stmt = 15, 
		RULE_function = 16, RULE_end_function = 17, RULE_suite_func = 18, RULE_suite = 19, 
		RULE_logical_not = 20, RULE_logical_op = 21, RULE_logical_expr = 22, RULE_exprcomp = 23, 
		RULE_comparison = 24, RULE_comp_op = 25, RULE_int_expr = 26, RULE_float_expr = 27, 
		RULE_var_int_expr = 28, RULE_var_float_expr = 29, RULE_term_int = 30, 
		RULE_term_float = 31, RULE_term_var_int = 32, RULE_term_var_float = 33, 
		RULE_factor_var_int = 34, RULE_factor_var_float = 35, RULE_factor_int = 36, 
		RULE_factor_float = 37, RULE_primary_int = 38, RULE_primary_float = 39, 
		RULE_expr = 40, RULE_term = 41, RULE_factor = 42, RULE_primary = 43, RULE_input_func = 44, 
		RULE_print_stmt = 45, RULE_arg = 46;
	private static String[] makeRuleNames() {
		return new String[] {
			"file_input", "stmt", "simple_stmt", "small_stmt", "expr_stmt", "list_stmt", 
			"list_op", "functions_stmt", "function_def", "flow_stmt", "break_stmt", 
			"continue_stmt", "compound_stmt", "if_stmt", "while_stmt", "for_stmt", 
			"function", "end_function", "suite_func", "suite", "logical_not", "logical_op", 
			"logical_expr", "exprcomp", "comparison", "comp_op", "int_expr", "float_expr", 
			"var_int_expr", "var_float_expr", "term_int", "term_float", "term_var_int", 
			"term_var_float", "factor_var_int", "factor_var_float", "factor_int", 
			"factor_float", "primary_int", "primary_float", "expr", "term", "factor", 
			"primary", "input_func", "print_stmt", "arg"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "'else'", 
			"'break'", "'continue'", "'while'", "'elif'", "'if'", "'for'", "'in'", 
			"'range'", "'print'", "'input'", "'('", "')'", "':'", "'+'", "'-'", "'*'", 
			"'/'", "'//'", "'%'", "'**'", "'<'", "'>'", "'='", "','", "'=='", "'!='", 
			"'<='", "'>='", "'['", "']'", "'and'", "'or'", "'not'", "'add'", "'size'", 
			"'remove'", "'return'", "'def'", "'func'", "'int'", "'float'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LSQB", "RSQB", "LBRACE", "RBRACE", "TYPE_COMMENT", "FSTRING_START", 
			"FSTRING_MIDDLE", "FSTRING_END", "INDENT", "DEDENT", "ELSE", "BREAK", 
			"CONTINUE", "WHILE", "ELIF", "IF", "FOR", "IN", "RANGE", "PRINT", "INPUT", 
			"LPAR", "RPAR", "COLON", "PLUS", "MINUS", "TIMES", "DIVIDE", "FLOOR_DIVIDE", 
			"MODULO", "EXPONENT", "LESS", "GREATER", "EQUAL", "COMMA", "EQEQUAL", 
			"NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", "LEFT_BRACKET", "RIGHT_BRACKET", 
			"AND", "OR", "NOT", "L_ADD", "L_SIZE", "L_REMOVE", "RETURN", "DEF", "FUNCTION_DEF", 
			"TYPE_INT", "TYPE_FLOAT", "TYPE_NUMBER", "NAME", "NEWLINE", "COMMENT", 
			"WS", "EXPLICIT_LINE_JOINING", "INT", "FLOAT", "LIST_VALUE", "NUMBER", 
			"ERRORTOKEN", "STRING", "A", "B", "C", "D", "E", "F"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MontyPythonParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MontyPythonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_inputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MontyPythonParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(MontyPythonParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MontyPythonParser.NEWLINE, i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2367450844742512640L) != 0)) {
				{
				setState(96);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NEWLINE:
					{
					setState(94);
					match(NEWLINE);
					}
					break;
				case BREAK:
				case CONTINUE:
				case WHILE:
				case IF:
				case FOR:
				case PRINT:
				case L_ADD:
				case L_SIZE:
				case L_REMOVE:
				case DEF:
				case TYPE_INT:
				case TYPE_FLOAT:
				case NAME:
				case LIST_VALUE:
					{
					setState(95);
					stmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(106);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				simple_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				compound_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				function();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public Small_stmtContext small_stmt() {
			return getRuleContext(Small_stmtContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MontyPythonParser.NEWLINE, 0); }
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_simple_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			small_stmt();
			setState(109);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public Functions_stmtContext functions_stmt() {
			return getRuleContext(Functions_stmtContext.class,0);
		}
		public List_opContext list_op() {
			return getRuleContext(List_opContext.class,0);
		}
		public List_stmtContext list_stmt() {
			return getRuleContext(List_stmtContext.class,0);
		}
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public Flow_stmtContext flow_stmt() {
			return getRuleContext(Flow_stmtContext.class,0);
		}
		public Print_stmtContext print_stmt() {
			return getRuleContext(Print_stmtContext.class,0);
		}
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
	}

	public final Small_stmtContext small_stmt() throws RecognitionException {
		Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_small_stmt);
		try {
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				functions_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				list_op();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				list_stmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				expr_stmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				flow_stmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				print_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expr_stmtContext extends ParserRuleContext {
		public TerminalNode LIST_VALUE() { return getToken(MontyPythonParser.LIST_VALUE, 0); }
		public List<TerminalNode> EQUAL() { return getTokens(MontyPythonParser.EQUAL); }
		public TerminalNode EQUAL(int i) {
			return getToken(MontyPythonParser.EQUAL, i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> NAME() { return getTokens(MontyPythonParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(MontyPythonParser.NAME, i);
		}
		public Logical_exprContext logical_expr() {
			return getRuleContext(Logical_exprContext.class,0);
		}
		public TerminalNode TYPE_INT() { return getToken(MontyPythonParser.TYPE_INT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MontyPythonParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MontyPythonParser.COMMA, i);
		}
		public List<TerminalNode> INT() { return getTokens(MontyPythonParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(MontyPythonParser.INT, i);
		}
		public List<Var_int_exprContext> var_int_expr() {
			return getRuleContexts(Var_int_exprContext.class);
		}
		public Var_int_exprContext var_int_expr(int i) {
			return getRuleContext(Var_int_exprContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(MontyPythonParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(MontyPythonParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(MontyPythonParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(MontyPythonParser.MINUS, i);
		}
		public TerminalNode TYPE_FLOAT() { return getToken(MontyPythonParser.TYPE_FLOAT, 0); }
		public List<TerminalNode> FLOAT() { return getTokens(MontyPythonParser.FLOAT); }
		public TerminalNode FLOAT(int i) {
			return getToken(MontyPythonParser.FLOAT, i);
		}
		public List<Var_float_exprContext> var_float_expr() {
			return getRuleContexts(Var_float_exprContext.class);
		}
		public Var_float_exprContext var_float_expr(int i) {
			return getRuleContext(Var_float_exprContext.class,i);
		}
		public Int_exprContext int_expr() {
			return getRuleContext(Int_exprContext.class,0);
		}
		public Float_exprContext float_expr() {
			return getRuleContext(Float_exprContext.class,0);
		}
		public Input_funcContext input_func() {
			return getRuleContext(Input_funcContext.class,0);
		}
		public Expr_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_stmt; }
	}

	public final Expr_stmtContext expr_stmt() throws RecognitionException {
		Expr_stmtContext _localctx = new Expr_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr_stmt);
		int _la;
		try {
			setState(258);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,30,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(119);
				match(LIST_VALUE);
				setState(120);
				match(EQUAL);
				setState(121);
				expr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(NAME);
				setState(123);
				match(EQUAL);
				setState(124);
				expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(125);
				match(NAME);
				setState(126);
				match(EQUAL);
				setState(127);
				logical_expr();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE_INT) {
					{
					setState(128);
					match(TYPE_INT);
					}
				}

				setState(131);
				match(NAME);
				{
				setState(132);
				match(EQUAL);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS || _la==MINUS) {
					{
					setState(133);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(138);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(136);
					match(INT);
					}
					break;
				case 2:
					{
					setState(137);
					var_int_expr();
					}
					break;
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(140);
					match(COMMA);
					setState(141);
					match(NAME);
					{
					setState(142);
					match(EQUAL);
					setState(144);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==PLUS || _la==MINUS) {
						{
						setState(143);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
					}

					setState(148);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(146);
						match(INT);
						}
						break;
					case 2:
						{
						setState(147);
						var_int_expr();
						}
						break;
					}
					}
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(155);
				match(TYPE_INT);
				setState(156);
				match(NAME);
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(157);
					match(COMMA);
					setState(158);
					match(NAME);
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==EQUAL) {
						{
						setState(159);
						match(EQUAL);
						}
					}

					setState(164);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(162);
						match(INT);
						}
						break;
					case 2:
						{
						setState(163);
						var_int_expr();
						}
						break;
					}
					}
					}
					setState(170);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(171);
				match(TYPE_FLOAT);
				setState(172);
				match(NAME);
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(173);
					match(COMMA);
					setState(174);
					match(NAME);
					setState(176);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==EQUAL) {
						{
						setState(175);
						match(EQUAL);
						}
					}

					setState(181);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
					case 1:
						{
						setState(178);
						match(INT);
						}
						break;
					case 2:
						{
						setState(179);
						match(FLOAT);
						}
						break;
					case 3:
						{
						setState(180);
						var_float_expr();
						}
						break;
					}
					}
					}
					setState(187);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE_FLOAT) {
					{
					setState(188);
					match(TYPE_FLOAT);
					}
				}

				setState(191);
				match(NAME);
				{
				setState(192);
				match(EQUAL);
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS || _la==MINUS) {
					{
					setState(193);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(198);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
				case 1:
					{
					setState(196);
					match(FLOAT);
					}
					break;
				case 2:
					{
					setState(197);
					var_float_expr();
					}
					break;
				}
				}
				setState(212);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(200);
					match(COMMA);
					setState(201);
					match(NAME);
					{
					setState(202);
					match(EQUAL);
					setState(204);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==PLUS || _la==MINUS) {
						{
						setState(203);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
					}

					setState(208);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
					case 1:
						{
						setState(206);
						match(FLOAT);
						}
						break;
					case 2:
						{
						setState(207);
						var_float_expr();
						}
						break;
					}
					}
					}
					}
					setState(214);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(216);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE_FLOAT) {
					{
					setState(215);
					match(TYPE_FLOAT);
					}
				}

				setState(218);
				match(NAME);
				{
				setState(219);
				match(EQUAL);
				setState(221);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PLUS || _la==MINUS) {
					{
					setState(220);
					_la = _input.LA(1);
					if ( !(_la==PLUS || _la==MINUS) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
				}

				setState(225);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,24,_ctx) ) {
				case 1:
					{
					setState(223);
					match(INT);
					}
					break;
				case 2:
					{
					setState(224);
					var_float_expr();
					}
					break;
				}
				}
				setState(241);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(227);
					match(COMMA);
					setState(228);
					match(NAME);
					setState(237);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==EQUAL) {
						{
						setState(229);
						match(EQUAL);
						setState(231);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==PLUS || _la==MINUS) {
							{
							setState(230);
							_la = _input.LA(1);
							if ( !(_la==PLUS || _la==MINUS) ) {
							_errHandler.recoverInline(this);
							}
							else {
								if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
								_errHandler.reportMatch(this);
								consume();
							}
							}
						}
